tests/ui/associated-type-bounds/return-type-notation/not-a-method.stderr
error[E0575]: expected function, found function `function`
  --> $DIR/not-a-method.rs:7:5
   |
LL |     function(..): Send,
   |     ^^^^^^^^^^^^ not a function

error[E0573]: expected type, found function `function`
  --> $DIR/not-a-method.rs:15:5
   |
LL |     function(): Send,
   |     ^^^^^^^^^^ not a type

error[E0576]: cannot find function `method` in this scope
  --> $DIR/not-a-method.rs:27:5
   |
LL |     method(..): Send,
   |     ^^^^^^ not found in this scope

error[E0412]: cannot find type `method` in this scope
  --> $DIR/not-a-method.rs:36:5
   |
LL |     method(): Send,
   |     ^^^^^^ not found in this scope

error: return type notation not allowed in this position yet
  --> $DIR/not-a-method.rs:7:5
   |
LL |     function(..): Send,
   |     ^^^^^^^^^^^^

error: return type notation not allowed in this position yet
  --> $DIR/not-a-method.rs:27:5
   |
LL |     method(..): Send,
   |     ^^^^^^^^^^

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0412, E0573, E0575, E0576.
For more information about an error, try `rustc --explain E0412`.
